Added SPA routing

--- a/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
@@ -2,5 +2,5 @@
     <div class="d-flex flex-grow-1 flex-column justify-content-center">
         <router-outlet></router-outlet>
     </div>
-    <app-footer message="SecureChat 2018"></app-footer>
+    <app-footer message="Databases University 2018"></app-footer>
 </div>
