--- a/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  login-page works!
-</p>
+<div class="d-flex flex-column align-items-center w-100">
+  <h1 class="mb-4">Log In</h1>
+  <app-login-form 
+      (login)="onLogin($event)"></app-login-form>
+</div>
