--- a/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
@@ -1,5 +1,7 @@
-<div class="d-flex flex-column align-items-center w-100">
-  <h1 class="mb-4">Log In</h1>
-  <app-login-form 
-      (login)="onLogin($event)"></app-login-form>
+<div class="d-flex flex-column align-items-center align-self-center justify-self-center w-50">
+  <mat-card class="w-75">
+    <mat-card-content>
+        <app-login-form [busy]="busy$ | async" [error]="error$ | async" (login)="onLogin($event)"></app-login-form>
+    </mat-card-content>
+  </mat-card>
 </div>
