--- a/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form class="d-flex flex-column align-items-center" [formGroup]="loginForm">
+<form class="d-flex flex-column align-items-center" [formGroup]="loginForm" (ngSubmit)="onLoginClicked()">
   <mat-form-field class="w-100">
     <input matInput placeholder="Username" formControlName="userName">
     <mat-error *ngIf="loginForm.hasError('required', 'userName')">
@@ -12,7 +12,7 @@
     </mat-error>
   </mat-form-field>
   <div class="d-flex flex-row justify-content-center mt-4 w-100">
-    <button mat-raised-button type="button" [disabled]="!loginForm.valid || busy" class="w-50" (click)="onLoginClicked()">Log In</button>
+    <button mat-raised-button type="button" [disabled]="!loginForm.valid || busy" class="w-50">Log In</button>
   </div>
   <mat-card-footer class="mt-4">
     <mat-error>
