--- a/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
@@ -1,21 +1,21 @@
-<form class="d-flex flex-column align-items-center" [formGroup]="loginForm" (ngSubmit)="onLoginClicked()">
+<form class="d-flex flex-column align-items-center" [formGroup]="loginForm" (ngSubmit)="onLoginClicked(loginForm, formDirective)" #formDirective="ngForm">
   <mat-form-field class="w-100">
     <input matInput placeholder="Username" formControlName="userName">
-    <mat-error *ngIf="loginForm.hasError('required', 'userName')">
+    <mat-error *ngIf="loginForm.touched && loginForm.hasError('required', 'userName')">
       Username is required
     </mat-error>
   </mat-form-field>
   <mat-form-field class="w-100">
     <input matInput placeholder="Password" type="password" formControlName="password">
-    <mat-error *ngIf="loginForm.hasError('required', 'password')">
+    <mat-error *ngIf="loginForm.touched && loginForm.hasError('required', 'password')">
       Password is required
     </mat-error>
   </mat-form-field>
   <div class="d-flex flex-row justify-content-center mt-4 w-100">
-    <button mat-raised-button type="button" [disabled]="!loginForm.valid || busy" class="w-50">Log In</button>
+    <button mat-raised-button type="submit" [disabled]="!loginForm.valid || busy" class="w-50">Log In</button>
   </div>
   <mat-card-footer class="mt-4">
-    <mat-error>
+    <mat-error *ngFor="let error of errors">
       {{error}}
     </mat-error>
   </mat-card-footer>
