--- a/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
@@ -1,6 +1,5 @@
-<div class="d-flex flex-column h-100">
-    <div class="d-flex flex-grow-1 flex-column justify-content-center">
+<div class="d-flex flex-column">
+    <div class="d-flex flex-column justify-content-center">
         <router-outlet></router-outlet>
     </div>
-    <app-footer message="Databases University 2018"></app-footer>
 </div>
