--- a/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
@@ -1,8 +1,12 @@
 <div class="d-flex flex-column align-items-center align-self-center justify-self-center w-50">
   <h3>Welcome to DBUFirst!</h3>
-  <mat-card class="w-75">
-    <mat-card-content>
-        <app-login-form [busy]="busy$ | async" [errors]="errors$ | async" (login)="onLogin($event)"></app-login-form>
-    </mat-card-content>
-  </mat-card>
+  <p-card class="w-75">
+    <app-login-form [busy]="busy$ | async" (login)="onLogin($event)"></app-login-form>
+  </p-card>
+  <p-footer>
+    <span *ngFor="let error of errors$ | async">
+      {{error}}
+    </span>
+  </p-footer>
+  <a [routerLink]="['/register']">Register</a>
 </div>
