--- a/WebApps/AngularSPA/Client/src/app/components/footer/footer.component.html
+++ b/WebApps/AngularSPA/Client/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
+<p-toolbar>
+    <div class="ui-toolbar-group-left">
         <span class="mr-auto ml-auto">{{message}}</span>
-    </mat-toolbar-row>
-</mat-toolbar>
+    </div>
+</p-toolbar>
