Fixed a few issues with the registration workflow

--- a/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
@@ -1,17 +1,21 @@
 <form class="d-flex flex-column align-items-center" [formGroup]="loginForm" (ngSubmit)="onLoginClicked(loginForm)">
-  <div class="ui-inputgroup">
+  <div class="p-2">
+    <div class="ui-inputgroup">
       <input type="text" pInputText placeholder="Username" formControlName="userName">
+    </div>
+    <span *ngIf="loginForm.touched && loginForm.hasError('required', 'userName')" class="text-danger">
+      Username is required
+    </span>
   </div>
-  <span *ngIf="loginForm.hasError('required', 'userName')" class="text-danger">
-    Username is required
-  </span>
-  <div class="ui-inputgroup">
+  <div class="p-2">
+    <div class="ui-inputgroup">
       <input type="text" pInputText placeholder="Password" formControlName="password">
+    </div>
+    <span *ngIf="loginForm.touched && loginForm.hasError('required', 'password')" class="text-danger">
+      Password is required
+    </span>
   </div>
-  <span *ngIf="loginForm.hasError('required', 'password')" class="text-danger">
-    Password is required
-  </span>
-  <button pButton type="submit" label="Log In" [disabled]="!loginForm.valid || busy" class="w-50"></button>
+    <button pButton type="submit" label="Log In" [disabled]="!loginForm.valid || busy"></button>
 </form>
 
 <!-- https://stackoverflow.com/questions/51605737/confirm-password-validation-in-angular-6 -->
