--- a/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/containers/login-page/login-page.component.html
@@ -4,7 +4,7 @@
     <app-login-form [busy]="busy$ | async" (login)="onLogin($event)"></app-login-form>
   </p-card>
   <p-footer>
-    <span *ngFor="let error of errors$ | async">
+    <span *ngFor="let error of errors$ | async" class="text-danger">
       {{error}}
     </span>
   </p-footer>
