--- a/WebApps/AngularSPA/Client/src/app/auth/containers/registration-page/registration-page.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/containers/registration-page/registration-page.component.html
@@ -3,7 +3,7 @@
     [busy]="busy$ | async" 
     (register)="onRegister($event)"></app-registration-form>
 </p-card>
-<p-footer>
+<p-footer class="d-flex flex-column align-items-center">
   <span *ngFor="let error of errors$ | async" class="text-danger">
     {{error}}
   </span>
