--- a/WebApps/AngularSPA/Client/src/app/components/footer/footer.component.html
+++ b/WebApps/AngularSPA/Client/src/app/components/footer/footer.component.html
@@ -1,5 +1,3 @@
-<p-toolbar>
-    <div class="ui-toolbar-group-left">
-        <span class="mr-auto ml-auto">{{message}}</span>
-    </div>
+<p-toolbar class="footer w-100 text-center">
+    <span>Databases University</span>
 </p-toolbar>
