--- a/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
+++ b/WebApps/AngularSPA/Client/src/app/auth/components/login-form/login-form.component.html
@@ -1,18 +1,16 @@
 <form class="d-flex flex-column align-items-center" [formGroup]="loginForm" (ngSubmit)="onLoginClicked(loginForm)">
-  <div class="p-2">   
-    <span class="ui-float-label">
-      <input id="float-input" type="text" pInputText formControlName="userName"> 
-      <label for="float-input">Username</label>
-    </span>
+  <div class="p-2"> 
+    <div class="ui-inputgroup">
+        <input type="text" pInputText placeholder="Username" formControlName="userName" class="w-100">
+    </div>
     <span *ngIf="loginForm.touched && loginForm.hasError('required', 'userName')" class="text-danger">
       Username is required
     </span>
   </div>
   <div class="p-2">   
-    <span class="ui-float-label">
-      <input id="float-input" type="text" pInputText formControlName="password"> 
-      <label for="float-input">Password</label>
-    </span>
+      <div class="ui-inputgroup">
+          <input type="password" pInputText placeholder="Password" formControlName="password" class="w-100">
+      </div>
     <span *ngIf="loginForm.touched && loginForm.hasError('required', 'password')" class="text-danger">
       Password is required
     </span>
