--- a/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="d-flex flex-column justify-content-center">
+<div class="d-flex flex-column justify-content-center h-100">
     <router-outlet></router-outlet>
 </div>
