--- a/WebApps/AngularSPA/Client/src/styles.css
+++ b/WebApps/AngularSPA/Client/src/styles.css
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url("../node_modules/primeicons/primeicons.css");
-@import url("../node_modules/primeng/resources/primeng.min.css");
-@import url("../node_modules/primeng/resources/themes/nova-colored/theme.css");
+@import "../node_modules/primeicons/primeicons.css";
+@import "../node_modules/primeng/resources/primeng.min.css";
+@import "../node_modules/primeng/resources/themes/nova-colored/theme.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/font-awesome/css/font-awesome.css";
 
 .width-10 {
     width: 10%
