Updated schema, add apply page routing

--- a/WebApps/AngularSPA/Client/src/app/containers/home/home.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/home/home.component.html
@@ -1,1 +1,5 @@
-<p-tieredMenu [model]="items | async"></p-tieredMenu>
+<div class="d-flex">
+    <p-tieredMenu [model]="items | async"></p-tieredMenu>
+    <router-outlet></router-outlet>
+</div>
+
