Added application page actions/reducer/effects

--- a/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/app/app.component.html
@@ -1,3 +1,13 @@
 <div class="d-flex flex-column justify-content-center h-100">
     <router-outlet></router-outlet>
 </div>
+
+<p-dialog 
+    [visible]="globalBusy | async" 
+    [modal]="true" 
+    [responsive]="true"
+    [blockScroll]="true"
+    [showHeader]="false"
+    [closable]="false">
+    <p-progressSpinner></p-progressSpinner>
+</p-dialog>
