Implemented the application form, made schema changes

--- a/WebApps/AngularSPA/Client/src/app/academics/containers/application-page/application-page.component.html
+++ b/WebApps/AngularSPA/Client/src/app/academics/containers/application-page/application-page.component.html
@@ -1,3 +1,5 @@
-<div class="d-flex justify-content-center align-items-center">
-  <app-application-form (submit)="onSubmit($event)"></app-application-form>
-</div>
+<app-application-form 
+  class="flex-grow-1 h-50" 
+  [semesters]="semesters | async"
+  [draft]="draft | async"
+  (submit)="onSubmit($event)"></app-application-form>
