--- a/WebApps/AngularSPA/Client/src/app/containers/home/home.component.html
+++ b/WebApps/AngularSPA/Client/src/app/containers/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="d-flex flex-grow-1">
     <p-tieredMenu [model]="items | async"></p-tieredMenu>
     <router-outlet></router-outlet>
 </div>
